<resources>
    <string name="app_name">速览新闻</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="logout">退出登录</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="profile">我的</string>
</resources>
